<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="wordEditFragment"
            type="com.pv.vampyrian.mokinkiszodzius.ui.wordedit.WordEditFragment"/>
        <variable
            name="word"
            type="com.pv.vampyrian.mokinkiszodzius.room.entityAndDao.WordEntity"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/save_word"
            style="@style/Button.True"
            android:layout_marginTop="8dp"
            android:onClick="@{wordEditFragment::saveWordClicked}"
            android:text="@string/sing_in_create_account"
            app:layout_constraintEnd_toEndOf="@+id/translate"
            app:layout_constraintTop_toBottomOf="@+id/translate" />


        <Button
            android:id="@+id/delete_word"
            style="@style/Button.False"
            android:layout_marginTop="8dp"
            android:onClick="@{wordEditFragment::deleteWordClicked}"
            android:text="@string/sing_in_signin"
            app:layout_constraintStart_toStartOf="@+id/translate"
            app:layout_constraintTop_toBottomOf="@+id/translate" />


        <EditText
            android:id="@+id/word"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/sign_in_email"
            android:inputType="textEmailAddress"
            android:text="@{word.word}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/translate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/sing_in_password"
            android:inputType="textPassword"
            android:text="@{word.translateWord}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/word" />




    </android.support.constraint.ConstraintLayout>

</layout>