<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="lessonEditFragment"
            type="com.pv.vampyrian.mokinkiszodzius.ui.lessonedit.LessonEditFragment"/>
        <variable
            name="lesson"
            type="com.pv.vampyrian.mokinkiszodzius.room.entityAndDao.LessonEntity"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/save_lesson_name"
            style="@style/Button.True"
            android:layout_marginTop="8dp"
            android:onClick="@{lessonEditFragment::saveLessonClicked}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/word"
            app:layout_constraintTop_toBottomOf="@+id/word" />



        <Button
            android:id="@+id/delete_lesson_name"
            style="@style/Button.False"
            android:layout_marginTop="8dp"
            android:onClick="@{lessonEditFragment::deleteLessonClicked}"
            android:text="@string/delete"
            app:layout_constraintStart_toStartOf="@+id/word"
            app:layout_constraintTop_toBottomOf="@+id/word" />



        <EditText
            android:id="@+id/word"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/new_lesson_name"
            android:inputType="textCapWords"
            android:text="@{lesson.name}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </android.support.constraint.ConstraintLayout>

</layout>